Work towards: https://jira.duraspace.org/browse/DURACLOUD-1027. Adds a Chronopolis storage provider. Also adds a DPN storage provider. Both of these extend from the Snapshot storage provider, which is now abstract. Replaces the SNAPSHOT provider type with DPN, and adds the CHRONOPOLIS type. In order to know the type of provider that is handling task requests (so that this information can be pushed to the mill), this adds a new method to the StorageProvider interface: getStorageProviderType(). This change is the cause of most of the code updates, just adding an implementation for that method in all of the classes that implement StorageProvider or test a StorageProvider implementation.

--- a/duradmin/src/main/webapp/style/base.css
+++ b/duradmin/src/main/webapp/style/base.css
@@ -276,9 +276,14 @@ body > #page-header
     background:url(../images/sdsc.png) no-repeat;
 }
 
-.snapshot-logo
+.dpn-logo
 {
     background:url(../images/dpn.png) no-repeat;
+}
+
+.chronopolis-logo
+{
+	background:url(../images/chronopolis.png) no-repeat;
 }
 
 .ui-layout-resizer
